; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_xkeymap.c_xkeymap_send_keys.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_xkeymap.c_xkeymap_send_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, %struct.TYPE_4__* }

@RDP_KEYPRESS = common dso_local global i32 0, align 4
@RDP_KEYRELEASE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Handling sequence element, keysym=0x%x\0A\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Sequence nesting too deep\0A\00", align 1
@True = common dso_local global i64 0, align 8
@False = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xkeymap_send_keys(i32* %0, i64 %1, i32 %2, i32 %3, i64 %4, i64 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_4__, align 8
  %16 = alloca %struct.TYPE_4__*, align 8
  %17 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %8, align 8
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  store i32 %6, i32* %14, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %11, align 4
  call void @xkeymap_translate_key(%struct.TYPE_4__* sret %17, i32* %18, i64 %19, i32 %20, i32 %21)
  %22 = bitcast %struct.TYPE_4__* %15 to i8*
  %23 = bitcast %struct.TYPE_4__* %17 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %22, i8* align 8 %23, i64 24, i1 false)
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %62

27:                                               ; preds = %7
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %27
  br label %105

32:                                               ; preds = %27
  %33 = load i64, i64* %13, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %54

35:                                               ; preds = %32
  %36 = load i32*, i32** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = call i32 @save_remote_modifiers(i32* %36, i64 %38)
  %40 = load i32*, i32** %8, align 8
  %41 = load i64, i64* %12, align 8
  %42 = call i32 @ensure_remote_modifiers(i32* %40, i64 %41, %struct.TYPE_4__* byval(%struct.TYPE_4__) align 8 %15)
  %43 = load i32*, i32** %8, align 8
  %44 = load i64, i64* %12, align 8
  %45 = load i32, i32* @RDP_KEYPRESS, align 4
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %47 = load i64, i64* %46, align 8
  %48 = call i32 @rdp_send_scancode(i32* %43, i64 %44, i32 %45, i64 %47)
  %49 = load i32*, i32** %8, align 8
  %50 = load i64, i64* %12, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = call i32 @restore_remote_modifiers(i32* %49, i64 %50, i64 %52)
  br label %61

54:                                               ; preds = %32
  %55 = load i32*, i32** %8, align 8
  %56 = load i64, i64* %12, align 8
  %57 = load i32, i32* @RDP_KEYRELEASE, align 4
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %59 = load i64, i64* %58, align 8
  %60 = call i32 @rdp_send_scancode(i32* %55, i64 %56, i32 %57, i64 %59)
  br label %61

61:                                               ; preds = %54, %35
  br label %105

62:                                               ; preds = %7
  %63 = load i64, i64* %13, align 8
  %64 = icmp ne i64 %63, 0
  br i1 %64, label %65, label %105

65:                                               ; preds = %62
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %16, align 8
  br label %66

66:                                               ; preds = %101, %65
  %67 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = trunc i64 %69 to i32
  %71 = zext i32 %70 to i64
  %72 = inttoptr i64 %71 to i8*
  %73 = call i32 @DEBUG_KBD(i8* %72)
  %74 = load i32, i32* %14, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %14, align 4
  %76 = icmp sgt i32 %74, 32
  br i1 %76, label %77, label %79

77:                                               ; preds = %66
  %78 = call i32 @error(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  br label %105

79:                                               ; preds = %66
  %80 = load i32*, i32** %8, align 8
  %81 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %82 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %81, i32 0, i32 0
  %83 = load i64, i64* %82, align 8
  %84 = load i32, i32* %10, align 4
  %85 = load i32, i32* %11, align 4
  %86 = load i64, i64* %12, align 8
  %87 = load i64, i64* @True, align 8
  %88 = load i32, i32* %14, align 4
  call void @xkeymap_send_keys(i32* %80, i64 %83, i32 %84, i32 %85, i64 %86, i64 %87, i32 %88)
  %89 = load i32*, i32** %8, align 8
  %90 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %91 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %90, i32 0, i32 0
  %92 = load i64, i64* %91, align 8
  %93 = load i32, i32* %10, align 4
  %94 = load i32, i32* %11, align 4
  %95 = load i64, i64* %12, align 8
  %96 = load i64, i64* @False, align 8
  %97 = load i32, i32* %14, align 4
  call void @xkeymap_send_keys(i32* %89, i64 %92, i32 %93, i32 %94, i64 %95, i64 %96, i32 %97)
  %98 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %99 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %98, i32 0, i32 2
  %100 = load %struct.TYPE_4__*, %struct.TYPE_4__** %99, align 8
  store %struct.TYPE_4__* %100, %struct.TYPE_4__** %16, align 8
  br label %101

101:                                              ; preds = %79
  %102 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %103 = icmp ne %struct.TYPE_4__* %102, null
  br i1 %103, label %66, label %104

104:                                              ; preds = %101
  br label %105

105:                                              ; preds = %31, %61, %77, %104, %62
  ret void
}

declare dso_local void @xkeymap_translate_key(%struct.TYPE_4__* sret, i32*, i64, i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @save_remote_modifiers(i32*, i64) #1

declare dso_local i32 @ensure_remote_modifiers(i32*, i64, %struct.TYPE_4__* byval(%struct.TYPE_4__) align 8) #1

declare dso_local i32 @rdp_send_scancode(i32*, i64, i32, i64) #1

declare dso_local i32 @restore_remote_modifiers(i32*, i64, i64) #1

declare dso_local i32 @DEBUG_KBD(i8*) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
